Fixed progress bar background being stretched in the beginning

--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,7 @@ canvas.webgl{
 
 .progress-bar-container{
     margin: auto;
+    position: relative;
 }
 
 .progress-bar-background{
